# claudius

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  setup.ps1  setup.sh
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml
agents/: _utilities.md  devils_advocate.md  domain_expert.md  efficiency_advisor.md  evaluator_agent.md  hr_agent.md  inquirer_agent.md  master_orchestrator.md  product_manager_agent.md  project_manager_agent.md  quality_advisor.md  reliability_engineer.md  risk_advisor.md  scribe_agent.md  session_scheduler.md  spawner_agent.md  trainer_agent.md
codex/: README.md
codex/.agents/plugins/: marketplace.json
codex/plugins/mas-governance/: .mcp.json
codex/plugins/mas-governance/.codex-plugin/: plugin.json
codex/plugins/mas-governance/skills/mas-clarify/: SKILL.md
codex/plugins/mas-governance/skills/mas-document/: SKILL.md
codex/plugins/mas-governance/skills/mas-examine/: SKILL.md
codex/plugins/mas-governance/skills/mas-handoff/: SKILL.md
codex/plugins/mas-governance/skills/mas-logwork/: SKILL.md
codex/plugins/mas-governance/skills/mas-postmortem/: SKILL.md
codex/plugins/mas-governance/skills/mas-review/: SKILL.md
commands/: markitdown.md  resume-mas.md
docs/: architecture.md  authoring-agents.md  authoring-skills.md  db-registry.md  exception-audit.md  onboarding.md  operation-modes.md  publishing.md  release-checklist.md  walkthrough.md
docs/conventions/: naming.md
docs/developer/: tooling.md
docs/governance/: behavioral-discipline.md  handoff_policies.md  metrics.md
examples/demo_project/: README.md  product_plan.sample.yaml
mas/: CLAUDE.md  README.md  system_config.yaml
mas/core/: __init__.py  cli.py  config.py  db.py  paths.py  runtime_config.py  server.py
mas/core/adapters/: __init__.py  postgres_store.py  sqlite_shared_state.py
mas/core/engine/: __init__.py  access_control.py  agent_ids.py  agent_runner.py  audit_logger.py  backend_adapters.py  capability_registry.py  checkpoint_writer.py  consistency_check.py  consultation_engine.py  consultation_gate.py  context_compressor.py  cross_project.py  event_recorder.py  handoff_engine.py  handoff_helpers.py  intake_checker.py  lifecycle_guard.py  manual_loop.py  message_bus.py  metrics_engine.py  observability.py  orchestration_loop.py  output_linter.py  prompt_assembler.py  response_parser.py  shared_state_manager.py  skill_bridge.py  skill_trigger.py  spawn_policy.py  state_reconciler.py  sync_knowledge.py  task_board.py  training_engine.py  vector_store.py
mas/core/tools/: naming_convention_check.py
mas/core/utils/: __init__.py  config.py  db_init.py  log_helpers.py  registry_seed.py  token_counter.py  wire_protocol.py
mas/domains/: content_creation.md  data_science.md  learning_analytics.md  research.md  software_engineering.md
mas/foundation/: checkpoint_format.md  event_types.yaml  folder_structure.yaml  memory_types.yaml  shared_state_schema.yaml  wire_protocol_spec.yaml
mas/foundation/schemas/: agent_registry.schema.json
mas/policies/: artifact_contracts.yaml  consultation_trigger_policy.yaml  evaluation_policy.yaml  governance_policy.yaml  handoff_protocol.yaml  lifecycle_invariants.yaml  skill_trigger_policy.yaml  spawn_policy.yaml  training_policy.yaml  trust_tier_policy.yaml  verbosity_policy.yaml
mas/roster/: registry_canonical.yaml  registry_index.yaml
mas/roster/trust_tiers/: tier_definitions.yaml
mas/templates/: analysis_agent_template.yaml  capability_gap_certificate_template.yaml  consultation_request_template.yaml  evaluation_report_template.yaml  execution_agent_template.yaml  handoff_template.yaml  lite_project_template.yaml  project_spec_template.yaml  spawn_request_template.yaml  utility_agent_template.yaml
mas/tests/: test_smoke.py
mas/tools/: capability_sync.py  purge_test_noise.py  reconcile_closed.py  roster_sync.py
scripts/: check_archive_clean.py  check_mas_discipline.py  export_source.ps1  export_source.sh  privacy_allow.txt  privacy_scan.py  validate_agents.py  validate_skills.py
skills/: README.md
skills/graphify/: SKILL.md
skills/mas-plan/: SKILL.md
standards/: README.md  agent-frontmatter.md  commit-style.md  documentation-format.md  knowledge-sources.md  mas-governance.md  mas-project-lifecycle.md  python-standards.md  security-and-permissions.md  sql-conventions.md  wire-protocol.md
