[project]
name = "mas"
version = "0.2.0"
description = "claudius — a governed multi-agent delivery framework for Claude Code (CLI, reusable agents, MAS workflow skills, policies, templates)."
readme = "README.md"
requires-python = ">=3.11"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [{ name = "Ricardo Santos" }]
keywords = ["claude", "claude-code", "multi-agent", "orchestration", "agents", "llm", "governance", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Environment :: Console",
]
dependencies = [
    "anthropic>=0.49.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "click>=8.1",
]

[project.urls]
Homepage = "https://github.com/RicardoSantos0/claudius"
Repository = "https://github.com/RicardoSantos0/claudius"
Issues = "https://github.com/RicardoSantos0/claudius/issues"

[project.optional-dependencies]
postgres = [
    "psycopg[binary]>=3.2",
]
vector = [
    "chromadb>=0.5",
]

[project.scripts]
mas = "core.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["mas/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]
addopts = ""  # public repo ships the fresh-install smoke suite only (no coverage gate)
# imp-003: xfail markers must be removed when work lands — an xpass is an error,
# not a silent pass, so completed-work tests cannot mask regressions.
xfail_strict = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mas/core"]
