[project]
# Distribution name (PyPI): `claudius`. The CLI command stays `mas` (see
# [project.scripts]) and the import package is `core`.
name = "claudius"
version = "0.2.0"
description = "claudius — a governed multi-agent delivery framework for Claude Code (CLI, reusable agents, MAS workflow skills, policies, templates)."
readme = "README.md"
requires-python = ">=3.11"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [{ name = "Ricardo Santos" }]
keywords = ["claude", "claude-code", "multi-agent", "orchestration", "agents", "llm", "governance", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Environment :: Console",
]
dependencies = [
    "anthropic>=0.49.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "click>=8.1",
    # Security lower bounds for transitive HTTP/name handling packages.
    "idna>=3.15",
    "urllib3>=2.7.0",
]

[project.urls]
Homepage = "https://github.com/RicardoSantos0/claudius"
Repository = "https://github.com/RicardoSantos0/claudius"
Issues = "https://github.com/RicardoSantos0/claudius/issues"

[project.optional-dependencies]
postgres = [
    "psycopg[binary]>=3.2",
]
vector = [
    # Avoid ChromaDB 1.x until GHSA-f4j7-r4q5-qw2c has a fixed release.
    "chromadb>=0.5,<1.0.0",
    "pydantic-settings>=2.14.2",
]
server = [
    "mcp>=1.0",
]

[project.scripts]
mas = "core.cli:main"
mas-server = "core.server:main"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["mas/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]
addopts = ""  # public repo ships the fresh-install smoke suite only (no coverage gate)
# imp-003: xfail markers must be removed when work lands — an xpass is an error,
# not a silent pass, so completed-work tests cannot mask regressions.
xfail_strict = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mas/core"]

# Bundle the read-only framework files into the wheel as package data under
# core/_bundled/, mirroring the source-tree layout. `mas init-workspace` copies
# them into a writable workspace ($MAS_HOME, default ~/.mas) so the CLI works
# from a pip install, not only from a git clone. (core.paths.bundled_dir())
[tool.hatch.build.targets.wheel.force-include]
"agents" = "core/_bundled/agents"
"skills" = "core/_bundled/skills"
"mas/system_config.yaml" = "core/_bundled/mas/system_config.yaml"
"mas/policies" = "core/_bundled/mas/policies"
"mas/templates" = "core/_bundled/mas/templates"
"mas/roster" = "core/_bundled/mas/roster"
"mas/foundation" = "core/_bundled/mas/foundation"
"mas/domains" = "core/_bundled/mas/domains"
